# fpl-ingest

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/contract/: ddl_contract.sql  schema_contract.json  validation_contract.json
docs/: architecture.md  data-contract.md  governance.md  guarantees.md  performance-review.md  production-readiness.md  schema-contract.md
docs/architecture/: contract.md
examples/: db_connection.py
src/fpl_ingest/: __init__.py  async_client.py  cli.py  cli_formatters.py  client.py  config.py  models.py  rate_limiter.py  store.py  sync_client.py  sync_http.py  transforms.py  transport.py  types.py
src/fpl_ingest/contract/: __init__.py  compiler.py  ddl_generator.py  test_contracts.py  validation_rules.py
src/fpl_ingest/domain/: __init__.py  execution_state.py  models.py  run_status.py  schema.py  transforms.py  types.py
src/fpl_ingest/pipeline/: __init__.py  core.py  db_setup.py  fixtures.py  gameweeks.py  history.py  results.py  runner.py  schema.py  shared.py  stage_result.py
src/fpl_ingest/storage/: __init__.py  store.py
src/fpl_ingest/transport/: __init__.py  async_client.py  rate_config.py  rate_limiter.py  sync_client.py
src/fpl_ingest/validation/: __init__.py  smoke_test.py
tests/: factories.py  test_api_contract.py  test_async_client.py  test_cli.py  test_concurrent_fetch.py  test_normalization.py  test_performance.py  test_rate_limiter.py  test_store.py  test_transforms.py
tests/contract/: test_contract_alignment.py  test_nullability.py  test_schema_drift.py  test_uniqueness.py
tests/domain/: test_transforms.py
tests/fixtures/smoke/: bootstrap_static.json  element_summary.json  fixtures.json
tests/integration/: test_api_contract.py
tests/pipeline/: test_cli.py  test_fail_fast_async.py  test_performance.py
tests/smoke/: test_smoke_test.py
tests/storage/: __init__.py  test_store.py
tests/transport/: __init__.py  test_async_client.py  test_rate_limiter.py
