[project]
name = "fpl-ingest"
version = "1.0.0"
description = "Reusable FPL API ingestion library: HTTP client, typed models, and generic transforms."
readme = "README.md"
authors = [
    { name = "gisaf22", email = "safari.gisa@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "responses",
]

[project.scripts]
fpl-ingest = "fpl_ingest.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure unit tests — in-memory fixtures, no DB, no network",
    "integration: tests against real master.db — skip if DB not found",
    "smoke: end-to-end tests with real API — requires TEAM_ID env var",
]
