[project]
name = "fpl-ingest"
version = "1.0.0"
description = "Contract-driven CLI ingestion system for Fantasy Premier League data."
readme = "README.md"
authors = [
    { name = "gisaf22", email = "safari.gisa@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "requests>=2.28",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Quality Assurance",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "responses",
    "types-requests>=2.33.0.20260408",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[project.scripts]
fpl-ingest = "fpl_ingest.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/gisaf22/fpl-ingest"
Issues = "https://github.com/gisaf22/fpl-ingest/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure unit tests — in-memory fixtures, no DB, no network",
    "integration: tests against real master.db — skip if DB not found",
    "smoke: end-to-end tests with real API — requires TEAM_ID env var",
    "perf: wall-clock performance benchmarks — not run by default",
]
